# packages/types/src/contracts/models/Category.ts
@@ -3,13 +3,14 @@
 /* tslint:disable */
 /* eslint-disable */
 export type Category = {
-    id: string
-    userId: string
-    title: string
-    description: string | null
-    for: string
-    logoIcon: string
-    color: string
-    subcategories: Array<any>
-    createdAt: string
-}
+    id: string;
+    userId: string;
+    title: string;
+    description: string | null;
+    for: string;
+    logoIcon: string;
+    color: string;
+    subcategories: Array<any>;
+    createdAt: string;
+};
+
