# packages/types/src/contracts/models/CurrencyEnum.ts
@@ -2,22 +2,4 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-export type CurrencyEnum =
-    | 'USD'
-    | 'EUR'
-    | 'GBP'
-    | 'JPY'
-    | 'CNY'
-    | 'INR'
-    | 'AUD'
-    | 'CAD'
-    | 'CHF'
-    | 'SEK'
-    | 'NZD'
-    | 'MXN'
-    | 'SGD'
-    | 'HKD'
-    | 'NOK'
-    | 'KRW'
-    | 'TRY'
-    | 'UNKNOWN'
+export type CurrencyEnum = 'USD' | 'EUR' | 'GBP' | 'JPY' | 'CNY' | 'INR' | 'AUD' | 'CAD' | 'CHF' | 'SEK' | 'NZD' | 'MXN' | 'SGD' | 'HKD' | 'NOK' | 'KRW' | 'TRY' | 'UNKNOWN';
